[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/sddl",
    "crates/collector",
    "crates/checks",
    "crates/graph",
    "crates/kerberos",
    "crates/report",
    "crates/sysvol",
    "crates/dcerpc",
    "crates/ntlm",
    "crates/smb",
    "cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["zevs"]
rust-version = "1.80"
description = "ADhammer — Active Directory security assessment and offensive tradecraft in Rust, with a from-scratch DCE/RPC · NTLM · SMB2 · Kerberos stack."
repository = "https://github.com/icedracon/adhammer"

[workspace.dependencies]
# internal (version required so crates.io can strip the path on publish)
adhammer-core      = { path = "crates/core",      version = "0.0.1" }
adhammer-sddl      = { path = "crates/sddl",      version = "0.0.1" }
adhammer-collector = { path = "crates/collector", version = "0.0.1" }
adhammer-checks    = { path = "crates/checks",    version = "0.0.1" }
adhammer-graph     = { path = "crates/graph",     version = "0.0.1" }
adhammer-kerberos  = { path = "crates/kerberos",  version = "0.0.1" }
adhammer-report    = { path = "crates/report",    version = "0.0.1" }
adhammer-sysvol    = { path = "crates/sysvol",    version = "0.0.1" }
adhammer-dcerpc    = { path = "crates/dcerpc",    version = "0.0.1" }
adhammer-ntlm      = { path = "crates/ntlm",      version = "0.0.1" }
adhammer-smb       = { path = "crates/smb",       version = "0.0.1" }

# external
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
thiserror   = "2"
bitflags    = { version = "2", features = ["serde"] }
tokio       = { version = "1", features = ["rt-multi-thread", "macros"] }
ldap3       = { version = "0.11", default-features = false, features = ["tls-native"] }
petgraph    = "0.6"
clap        = { version = "4", features = ["derive"] }
tracing     = "0.1"
tracing-subscriber = "0.3"

# crypto / kerberos (roasting layer)
picky-krb   = "0.9"
picky-asn1  = "0.10"
md-5        = "0.10"
md4         = "0.10"
hmac        = "0.12"
rc4         = "0.1"
aes         = "0.8"
cbc         = "0.1"
hex         = "0.4"
base64      = "0.22"

[profile.release]
lto = "thin"
codegen-units = 1
