[package]
name = "adhammer-collector"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Optional SASL GSSAPI (Kerberos) bind — signed LDAP over 389 without LDAPS/--insecure,
# via ambient Kerberos (ccache on Unix, SSPI on Windows). Pulls a C dep (breaks static
# musl), so it is off by default.
gssapi = ["ldap3/gssapi"]

[dependencies]
adhammer-core = { workspace = true }
ldap3 = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rustls = "0.21"
