[package]
name = "adhammer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ADhammer core model — SID/GUID, AD object snapshot, findings, MITRE mapping."
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
