[package]
name = "adhammer-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ADhammer control-path graph — BloodHound-style attack paths to Tier-0 (petgraph)."
repository.workspace = true

[dependencies]
adhammer-core = { workspace = true }
adhammer-sddl = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
