[package]
name = "adhammer-kerberos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ADhammer Kerberos — AS-REP/Kerberoast, S4U/RBCD, Shadow Credentials PKINIT (picky-krb)."
repository.workspace = true

[dependencies]
adhammer-core = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }

# Kerberos roasting is built on picky-krb (Devolutions pure-Rust ASN.1 + KRB message
# types) — no ASN.1 from scratch.
picky-krb = { workspace = true }
picky-asn1 = { workspace = true }
picky-asn1-der = "0.5"
serde = { workspace = true }
rand = "0.8"
rsa = "0.9"
sha1 = "0.10"
sha2 = { version = "0.10", features = ["oid"] }
picky-asn1-x509 = { version = "0.14", features = ["pkcs7"] }
tokio = { workspace = true, features = ["net", "io-util", "time"] }
