[package]
name = "adhammer-ntlm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
md4 = { workspace = true }
md-5 = { workspace = true }
hmac = { workspace = true }
rc4 = { workspace = true }
rand = "0.8"
