[package]
name = "adhammer-sysvol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adhammer-core = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
